# thinkpad-energy-manager

./: README.md  pyproject.toml
.github/workflows/: test.yml
docs/: DESIGN.md  INSTALL.md  MEASUREMENT.md  REPO_STRUCTURE.md  SCHEMA.md  SECURITY.md  TEST_PLAN.md  TLP.md
examples/: config.toml
packaging/desktop/: thinkpad-energy-manager.desktop
packaging/systemd/user/: battery-auditor-blackbox.service  battery-auditor.service  thinkpad-energy-manager-blackbox.service  thinkpad-energy-manager.service
scripts/: install-user-service.sh  record-blackbox.sh  run-dev.sh  uninstall-user-service.sh
src/battery_auditor/: __init__.py  cli.py  config.py
src/battery_auditor/core/: analyzer.py  battery_model.py  collector.py  database.py  events.py  gauge_jumps.py  loadgen.py  models.py  relearn.py  runtime.py  sleep_monitor.py  sysfs.py  system_controls.py  thresholds.py  tlp.py
src/battery_auditor/ui/: main.py  session_manager.py
tests/: test_battery_model.py  test_collector.py  test_database.py  test_events.py  test_gauge_jumps.py  test_phase_analyzer.py  test_relearn.py  test_runtime_cli.py  test_sleep_monitor.py  test_sysfs.py  test_system_controls.py  test_thresholds.py  test_ui_chart.py  test_ui_main.py
