[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-auditor"
version = "0.1.0"
description = "Low-impact Linux battery recorder, diagnostics UI, and TLP companion for multi-battery laptops."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ángel Rafael Rubio Fernández" }
]
keywords = ["battery", "linux", "thinkpad", "tlp", "qt", "sqlite", "sysfs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
ui = ["PySide6_Essentials>=6.7", "pyqtgraph>=0.13.7"]
system = ["dbus-next>=0.2.3"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
battery-auditor = "battery_auditor.cli:main"
battery-auditor-qt = "battery_auditor.ui.main:main"

[project.urls]
Homepage = "https://github.com/angelrubiodev/battery-auditor"
Issues = "https://github.com/angelrubiodev/battery-auditor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
mypy_path = "src"
